# sentinel

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AUTHORS  Cargo.toml  Cross.toml  README.md  TODO.md
.github/: FUNDING.yml  dependabot.yml
.github/scripts/: check-tag-version.sh
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.ubuntu.yml  ubuntu.Dockerfile
docker/releases/: aarch64.Dockerfile
docker/scripts/: install_python.sh
src/: main.rs  service.rs  utils.rs
src/cli/: mod.rs
src/io/: compress_serde.rs  mod.rs
